@@ -39,9 +39,12 @@
  * HISTORY
  * 
  * $Log$
- * Revision 1.9  2005/02/01  22:21:19  rkm
- * Added raw data logging, and raw data pass-through mode to cont_ad
+ * Revision 1.10  2005/02/13  01:29:48  rkm
+ * Fixed cont_ad_read to never cross sil/speech boundary, and rawmode
  * 
+ * Revision 1.9  2005/02/01 22:21:19  rkm
+ * Added raw data logging, and raw data pass-through mode to cont_ad
+ *
  * Revision 1.8  2004/07/23 23:36:34  egouvea
  * Ravi's merge, with the latest fixes in the FSG code, and making the log files generated by FSG, LM, and allphone have the same 'look and feel', with the backtrace information presented consistently
  *
@@ -351,8 +354,9 @@ static int32 find_thresh (cont_ad_t *r)
     r->thresh_speech = r->noise_level + r->delta_speech;
 
     if (r->logfp) {
-      fprintf (r->logfp, "Thresh: Fr: %d, NoisePeak: %d, Noiselevel: %d -> %d, SilThresh: %d -> %d, SpchThresh: %d -> %d\n",
-	       r->log_frmno, th,
+      fprintf (r->logfp, "%7.2fs %8df: NoisePeak: %d, Noiselevel: %d -> %d, Th-Sil: %d -> %d, Th-Sp: %d -> %d\n",
+	       (double)(r->tot_frm * r->spf)/(double)(r->sps), r->tot_frm,
+	       th,
 	       old_noise_level, r->noise_level,
 	       old_thresh_sil, r->thresh_sil, old_thresh_speech, r->thresh_speech);
       
@@ -371,6 +375,60 @@ static int32 find_thresh (cont_ad_t *r)
 
 
 /*
+ * Dummy boundary detection, but in rawmode; i.e., every data frame is
+ * assumed to be speech and passed through to application.
+ */
+static void boundary_detect_rawmode (cont_ad_t *r, int32 frm)
+{
+    spseg_t *seg;
+    
+    assert (r->n_other == 0);
+    
+    if (r->logfp) {
+      fprintf (r->logfp, "%7.2fs %8d[%3d]f: P: %2d, N: %2d, T+: %2d, T-: %2d, #O: %2d, %s\n",
+	       (double)(r->tot_frm * r->spf)/(double)(r->sps), r->tot_frm, frm,
+	       r->frm_pow[frm],
+	       r->noise_level, r->thresh_speech, r->thresh_sil,
+	       r->n_other,
+	       (r->state == CONT_AD_STATE_SIL) ? "--" : "Sp");
+    }
+    
+    if (r->state == CONT_AD_STATE_SIL) {
+      assert (r->tot_frm == 1);		/* This must be the first frame of rawdata */
+      assert (frm == 0);
+      assert (r->spseg_head == NULL);
+      
+      /* Allocate and set up speech segment descriptor */
+      seg = malloc (sizeof(*seg));
+      
+      seg->startfrm = 0;
+      seg->nfrm = 1;
+      seg->next = NULL;
+      
+      r->spseg_head = seg;
+      r->spseg_tail = seg;
+      
+      r->state = CONT_AD_STATE_SPEECH;
+      
+      if (r->logfp) {
+	fprintf (r->logfp, "%7.2fs %8d[%3d]f: Sil -> Sp detect (rawmode)\n",
+		 (double)(r->tot_frm * r->spf)/(double)(r->sps),
+		 r->tot_frm, frm);
+      }
+    } else {
+      /* There should be only one speech segment descriptor */
+      assert (r->spseg_head == r->spseg_tail);
+      assert (r->spseg_head != NULL);
+      
+      r->spseg_tail->nfrm++;
+    }
+    
+    if (r->logfp)
+      fflush (r->logfp);
+}
+
+
+/*
  * Main silence/speech region detection routine.  If currently in
  * SILENCE state, switch to SPEECH state if a window (r->winsize)
  * of frames is mostly non-silence.  If in SPEECH state, switch to
@@ -383,43 +441,37 @@ static void boundary_detect (cont_ad_t *r, int32 frm)
     
     assert (r->n_other >= 0);
     
+    if (r->rawmode) {
+      boundary_detect_rawmode (r, frm);
+      return;
+    }
+    
     r->win_validfrm++;
     if (r->state == CONT_AD_STATE_SIL) {
-	if (r->frm_pow[frm] >= r->thresh_speech) {
+	if (r->frm_pow[frm] >= r->thresh_speech)
 	    r->n_other++;
-	    r->n_in_a_row++;
-	} else {
-	    r->n_in_a_row = 0;
-	}
     } else {
-        if (r->frm_pow[frm] <= r->thresh_sil) {
+        if (r->frm_pow[frm] <= r->thresh_sil)
 	    r->n_other++;
-	    r->n_in_a_row++;
-	} else {
-	    r->n_in_a_row = 0;
-	}
     }
     
     if (r->logfp) {
-      fprintf (r->logfp, "Time: %8.2fs: Frm: %3d, Pow: %2d, St: %s, #Other: %2d\n",
-	       (double)(r->log_frmno * r->spf)/(double)(r->sps),
-	       frm,
+      fprintf (r->logfp, "%7.2fs %8d[%3d]f: P: %2d, N: %2d, T+: %2d, T-: %2d, #O: %2d, %s\n",
+	       (double)(r->tot_frm * r->spf)/(double)(r->sps),
+	       r->tot_frm, frm,
 	       r->frm_pow[frm],
-	       (r->state == CONT_AD_STATE_SIL) ? "Sil" : "Spch",
-	       r->n_other);
-      r->log_frmno++;
+	       r->noise_level, r->thresh_speech, r->thresh_sil,
+	       r->n_other,
+	       (r->state == CONT_AD_STATE_SIL) ? "--" : "Sp");
     }
     
     if (r->win_validfrm < r->winsize)	/* Not reached full analysis window size */
 	return;
     assert (r->win_validfrm == r->winsize);
 
-//    fprintf(stderr, "State is %s n_other is %d\n", r->state == CONT_AD_STATE_SIL ?
-//	    "silence" : "speech", r->n_other);
-    
     if (r->state == CONT_AD_STATE_SIL) {	/* Currently in SILENCE state */
 	if (r->n_frm >= r->winsize + r->leader) {
-	    if ((r->n_other >= r->speech_onset) || r->rawmode) {
+	    if (r->n_other >= r->speech_onset) {
 		/* Speech detected; create speech segment description */
 		seg = malloc (sizeof(*seg));
 		
@@ -436,8 +488,12 @@ static void boundary_detect (cont_ad_t *r, int32 frm)
 		r->spseg_tail = seg;
 		
 		r->state = CONT_AD_STATE_SPEECH;
-		if (r->logfp)
-		  fprintf (r->logfp, "BdryDetect: Fr: %3d, Sil -> Spch\n", frm);
+		
+		if (r->logfp) {
+		  fprintf (r->logfp, "%7.2fs %8d[%3d]f: Sil -> Sp detect\n",
+			   (double)(r->tot_frm * r->spf)/(double)(r->sps),
+			   r->tot_frm, frm);
+		}
 		
 		/* Now in SPEECH state; want to look for silence from end of this window */
 		r->win_validfrm = 1;
@@ -445,17 +501,20 @@ static void boundary_detect (cont_ad_t *r, int32 frm)
 
 		/* Count #sil frames remaining in reduced window (of 1 frame) */
 		r->n_other = (r->frm_pow[frm] <= r->thresh_sil) ? 1 : 0;
-		r->n_in_a_row = r->n_other;
 	    }
 	}
     } else {
-	if ((r->n_other >= r->sil_onset) && (! r->rawmode)) {
+	if (r->n_other >= r->sil_onset) {
 	    /* End of speech detected; speech->sil transition */
 	    r->spseg_tail->nfrm += r->trailer;
 	    
 	    r->state = CONT_AD_STATE_SIL;
-	    if (r->logfp)
-	      fprintf (r->logfp, "BdryDetect: Fr: %3d, Spch -> Sil\n", frm);
+		
+	    if (r->logfp) {
+	      fprintf (r->logfp, "%7.2fs %8d[%3d]f: Sp -> Sil detect\n",
+		       (double)(r->tot_frm * r->spf)/(double)(r->sps),
+		       r->tot_frm, frm);
+	    }
 	    
 	    /* Now in SILENCE state; start looking for speech trailer+leader frames later */
 	    r->win_validfrm -= (r->trailer + r->leader - 1);
@@ -465,14 +524,10 @@ static void boundary_detect (cont_ad_t *r, int32 frm)
 	    
 	    /* Count #speech frames remaining in reduced window */
 	    r->n_other = 0;
-	    r->n_in_a_row = 0;
 	    for (f = r->win_startfrm;; ) {
-		if (r->frm_pow[f] >= r->thresh_speech) {
+		if (r->frm_pow[f] >= r->thresh_speech)
 		    r->n_other++;
-		    r->n_in_a_row++;
-		} else {
-		    r->n_in_a_row = 0;
-		}
+		
 		if (f == frm)
 		    break;
 		
@@ -495,15 +550,11 @@ static void boundary_detect (cont_ad_t *r, int32 frm)
 	if (r->frm_pow[r->win_startfrm] >= r->thresh_speech) {
 	  if (r->n_other > 0)
 	    r->n_other--;
-	  if (r->n_in_a_row > 0)
-	    r->n_in_a_row--;
 	}
     } else {
 	if (r->frm_pow[r->win_startfrm] <= r->thresh_sil) {
 	  if (r->n_other > 0)
 	    r->n_other--;
-	  if (r->n_in_a_row > 0)
-	    r->n_in_a_row--;
 	}
     }
     r->win_validfrm--;
@@ -543,6 +594,35 @@ void get_audio_data(cont_ad_t *r, int16 *buf, int32 max) {
 #endif
 
 
+static void cont_ad_read_log (cont_ad_t *r, int32 retval)
+{
+  spseg_t *seg;
+  
+  fprintf (r->logfp, "return from cont_ad_read() -> %d:\n", retval);
+  fprintf (r->logfp, "\tread_ts: %d (%.2fs)\n",
+	   r->read_ts, (float32)r->read_ts / (float32)r->sps);
+  fprintf (r->logfp, "\tsiglvl: %d\n", r->siglvl);
+  fprintf (r->logfp, "\theadfrm: %d\n", r->headfrm);
+  fprintf (r->logfp, "\tn_frm: %d\n", r->n_frm);
+  fprintf (r->logfp, "\tn_sample: %d\n", r->n_sample);
+  fprintf (r->logfp, "\twin_startfrm: %d\n", r->win_startfrm);
+  fprintf (r->logfp, "\twin_validfrm: %d\n", r->win_validfrm);
+  fprintf (r->logfp, "\tnoise_level: %d\n", r->noise_level);
+  fprintf (r->logfp, "\tthresh_sil: %d\n", r->thresh_sil);
+  fprintf (r->logfp, "\tthresh_speech: %d\n", r->thresh_speech);
+  fprintf (r->logfp, "\tn_other: %d\n", r->n_other);
+  fprintf (r->logfp, "\tstate: %d\n", r->state);
+  fprintf (r->logfp, "\ttot_frm: %d\n", r->tot_frm);
+  
+  fprintf (r->logfp, "\tspseg:");
+  for (seg = r->spseg_head; seg; seg = seg->next)
+    fprintf (r->logfp, " %d[%d]", seg->startfrm, seg->nfrm);
+  fprintf (r->logfp, "\n");
+  
+  fflush (r->logfp);
+}
+
+
 /*
  * Main function called by the application to filter out silence regions.
  * Maintains a linked list of speech segments pointing into r->adbuf and feeds
@@ -550,7 +630,7 @@ void get_audio_data(cont_ad_t *r, int16 *buf, int32 max) {
  */
 int32 cont_ad_read (cont_ad_t *r, int16 *buf, int32 max)
 {
-    int32 head, tail, tailfrm, len, flen, eof;
+    int32 head, tail, tailfrm, len, flen, retval;
     int32 i, f, l;
     spseg_t *seg;
     int num_to_copy = 0, num_left = max;
@@ -559,12 +639,13 @@ int32 cont_ad_read (cont_ad_t *r, int16 *buf, int32 max)
       return -1;
     
     if (max < r->spf) {
-	fflush(stdout);
-	fprintf(stderr, "cont_ad_read requires buffer of at least %d samples\n",
-		r->spf);
-	fflush (stderr);
-	
-	return -1;
+      E_ERROR("cont_ad_read requires buffer of at least %d samples\n", r->spf);
+      return -1;
+    }
+    
+    if (r->logfp) {
+      fprintf (r->logfp, "cont_ad_read(,, %d)\n", max);
+      fflush (r->logfp);
     }
     
     /*
@@ -577,11 +658,10 @@ int32 cont_ad_read (cont_ad_t *r, int16 *buf, int32 max)
     len = r->n_sample - (r->n_frm * r->spf);	/* #partial frame samples at the tail */
     assert ((len >= 0) && (len < r->spf));
     
-    eof = 0;	/* Clear end-of-file indication */
-    if (tail < r->adbufsize) {
+    if ((tail < r->adbufsize) && (! r->eof)) {
       if (r->adfunc != NULL) {
 	if ((l = (*(r->adfunc))(r->ad, r->adbuf+tail, r->adbufsize - tail)) < 0) {
-	  eof = 1;
+	  r->eof = 1;
 	  l = 0;
 	}
       } else {
@@ -613,12 +693,12 @@ int32 cont_ad_read (cont_ad_t *r, int16 *buf, int32 max)
       len += l;
       r->n_sample += l;
     }
-    if ((tail >= r->adbufsize) && (! eof)) {
+    if ((tail >= r->adbufsize) && (! r->eof)) {
       tail -= r->adbufsize;
       if (tail < head) {
 	if (r->adfunc != NULL) {
 	  if ((l = (*(r->adfunc))(r->ad, r->adbuf+tail, head - tail)) < 0) {
-	    eof = 1;
+	    r->eof = 1;
 	    l = 0;
 	  }
 	} else {
@@ -671,31 +751,26 @@ int32 cont_ad_read (cont_ad_t *r, int16 *buf, int32 max)
 	   * Since threshold has been updated, recompute r->n_other.
 	   * (RKM: Is this really necessary?  Comment out??)
 	   */
-	  r->n_other = 0;
-	  r->n_in_a_row = 0;
-	  if (r->state == CONT_AD_STATE_SIL) {
-	    for (i = r->win_validfrm, f = r->win_startfrm; i > 0; --i) {
-	      if (r->frm_pow[f] >= r->thresh_speech) {
-		r->n_other++;
-		r->n_in_a_row++;
-	      } else {
-		r->n_in_a_row = 0;
+	  if (! r->rawmode) {
+	    r->n_other = 0;
+	    if (r->state == CONT_AD_STATE_SIL) {
+	      for (i = r->win_validfrm, f = r->win_startfrm; i > 0; --i) {
+		if (r->frm_pow[f] >= r->thresh_speech)
+		  r->n_other++;
+		
+		f++;
+		if (f >= CONT_AD_ADFRMSIZE)
+		  f = 0;
 	      }
-	      f++;
-	      if (f >= CONT_AD_ADFRMSIZE)
-		f = 0;
-	    }
-	  } else {
-	    for (i = r->win_validfrm, f = r->win_startfrm; i > 0; --i) {
-	      if (r->frm_pow[f] <= r->thresh_sil) {
-		r->n_other++;
-		r->n_in_a_row++;
-	      } else {
-		r->n_in_a_row = 0;
+	    } else {
+	      for (i = r->win_validfrm, f = r->win_startfrm; i > 0; --i) {
+		if (r->frm_pow[f] <= r->thresh_sil)
+		  r->n_other++;
+		
+		f++;
+		if (f >= CONT_AD_ADFRMSIZE)
+		  f = 0;
 	      }
-	      f++;
-	      if (f >= CONT_AD_ADFRMSIZE)
-		f = 0;
 	    }
 	  }
 #endif
@@ -703,15 +778,52 @@ int32 cont_ad_read (cont_ad_t *r, int16 *buf, int32 max)
     }
     
     /*
-     * At last ready to copy speech data, if any.  Skip past any silence before the
-     * first available speech segment.  If no speech segment, simply consume as much of
-     * silence as possible.
+     * If eof on input data source, cleanup the final active speech segment,
+     * if any.
      */
-    if ((seg = r->spseg_head) == NULL) {
-	assert (r->state == CONT_AD_STATE_SIL);
+    if (r->eof && (r->state == CONT_AD_STATE_SPEECH)) {
+      /*
+       * Still inside a speech segment when input data got over.  Absort any
+       * remaining frames into the final speech segment.
+       */
+      assert (r->spseg_tail != NULL);
+      
+      /* Absorb frames still in analysis window into final speech seg */
+      assert ((r->win_validfrm >= 0) && (r->win_validfrm < r->winsize));
+      r->spseg_tail->nfrm += r->win_validfrm;
+      
+      r->win_startfrm += r->win_validfrm;
+      if (r->win_startfrm >= CONT_AD_ADFRMSIZE)
+	r->win_startfrm -= CONT_AD_ADFRMSIZE;
+      r->win_validfrm = 0;
+      r->n_other = 0;
+      
+      r->state = CONT_AD_STATE_SIL;
+    }
+    
+    /*
+     * At last ready to copy speech data, if any.  Raw speech data is segmented
+     * into alternating speech and silence segments. But any single call to
+     * cont_ad_read will never cross a speech/silence boundary.
+     */
+    seg = r->spseg_head;
+    
+    if ((seg == NULL) || (r->headfrm != seg->startfrm)) {
+        /*
+	 * Either no speech data available, or inside a silence segment.  Figure
+	 * out the length of the silence segment.
+	 */
+	if (seg == NULL) {
+	    assert (r->state == CONT_AD_STATE_SIL);
+	    
+	    flen = r->n_frm - (r->winsize + r->leader - 1);
+	} else {
+	    flen = seg->startfrm - r->headfrm;
+	    if (flen < 0)
+		flen += CONT_AD_ADFRMSIZE;
+	}
 	
-	/* No speech segment available; consume accumulated silence if any */
-	flen = r->n_frm - (r->winsize + r->leader - 1);
+	/* Consume the silence segment, if any */
 	if (flen > 0) {	/* Can consume flen silence frames from current head of data */
 	    r->siglvl = max_siglvl (r, r->headfrm, flen);
 	    r->n_frm -= flen;
@@ -723,18 +835,28 @@ int32 cont_ad_read (cont_ad_t *r, int16 *buf, int32 max)
 
 	len = 0;	/* #samples being copied */
     } else {
-	/* Copy integral #frames of speech data pointed to by seg (may be 0-length!) */
+	/*
+	 * In a speech segment; copy integral #frames of speech data from seg.
+	 * (May be 0-length!)
+	 */
+	assert (seg->startfrm == r->headfrm);
+	
 	flen = max / r->spf;
 	if (flen > seg->nfrm)
 	    flen = seg->nfrm;
 	len = (flen * r->spf);	/* #samples being copied */
 	r->siglvl = max_siglvl (r, seg->startfrm, flen);
-
+	
 	/* Copy data to buf.  If seg wrapped around adbuf break into two operations */
 	if (seg->startfrm + flen > CONT_AD_ADFRMSIZE) {
 	    f = CONT_AD_ADFRMSIZE - seg->startfrm;
 	    l = (f * r->spf);
 	    memcpy (buf, r->adbuf + (seg->startfrm * r->spf), l * sizeof(int16));
+	    
+	    if (r->logfp) {
+	      fprintf (r->logfp, "return %d speech frames [%d..%d]; %d samples\n",
+		       f, seg->startfrm, seg->startfrm + f - 1, l);
+	    }
 	    
 	    buf += l;
 	    seg->startfrm = 0;	/* Wrapped around */
@@ -744,6 +866,11 @@ int32 cont_ad_read (cont_ad_t *r, int16 *buf, int32 max)
 	if (flen > 0) {
 	    l = (flen * r->spf);
 	    memcpy (buf, r->adbuf + (seg->startfrm * r->spf), l * sizeof(int16));
+	    
+	    if (r->logfp) {
+	      fprintf (r->logfp, "return %d speech frames [%d..%d]; %d samples\n",
+		       flen, seg->startfrm, seg->startfrm + flen - 1, l);
+	    }
 
 	    seg->startfrm += flen;
 	    if (seg->startfrm >= CONT_AD_ADFRMSIZE)
@@ -772,11 +899,16 @@ int32 cont_ad_read (cont_ad_t *r, int16 *buf, int32 max)
 
     /* Update timestamp.  Total raw A/D read - those remaining to be consumed */
     r->read_ts = (r->tot_frm - r->n_frm) * r->spf;
-
+    
     if (len == 0)
-	return (eof ? -1 : 0);
+	retval = (r->eof && (r->spseg_head == NULL)) ? -1 : 0;
     else
-	return len;
+	retval = len;
+    
+    if (r->logfp)
+      cont_ad_read_log (r, retval);
+    
+    return retval;
 }
 
 
@@ -1000,7 +1132,6 @@ int32 cont_ad_reset (cont_ad_t *r)
     r->win_startfrm = 0;
     r->win_validfrm = 0;
     r->n_other = 0;
-    r->n_in_a_row = 0;
 
     r->state = CONT_AD_STATE_SIL;
     
@@ -1013,7 +1144,7 @@ int32 cont_ad_close (cont_ad_t *cont)
     if (cont == NULL)
       return -1;
     
-    cont_ad_reset (cont);	/* Free any remaining speech segments */
+    cont_ad_reset (cont);	/* Frees any remaining speech segments */
     
     free (cont->adbuf);
     free (cont->pow_hist);
@@ -1042,55 +1173,42 @@ int32 cont_ad_attach (cont_ad_t *c, ad_rec_t *a, int32 (*func)(ad_rec_t *, int16
     
     c->ad = a;
     c->adfunc = func;
+    c->eof = 0;
+    
     return 0;
 }
 
 
 int32 cont_set_thresh(cont_ad_t *r, int32 silence, int32 speech) {
-  int i, f;
-
+  int32 i, f;
+  
   r->thresh_speech = speech;
   r->thresh_sil = silence;
   
   /* Since threshold has been updated, recompute r->n_other */
-  r->n_other = 0;
-  r->n_in_a_row = 0;
-  if (r->state == CONT_AD_STATE_SIL) {
-    for (i = r->win_validfrm, f = r->win_startfrm; i > 0; --i) {
-      if (r->frm_pow[f] >= r->thresh_speech) {
-	r->n_other++;
-	r->n_in_a_row++;
-      } else {
-	r->n_in_a_row = 0;
+  if (! r->rawmode) {
+    r->n_other = 0;
+    if (r->state == CONT_AD_STATE_SIL) {
+      for (i = r->win_validfrm, f = r->win_startfrm; i > 0; --i) {
+	if (r->frm_pow[f] >= r->thresh_speech)
+	  r->n_other++;
+	
+	f++;
+	if (f >= CONT_AD_ADFRMSIZE)
+	  f = 0;
       }
-      f++;
-      if (f >= CONT_AD_ADFRMSIZE)
-	f = 0;
-    }
-  } else {
-    for (i = r->win_validfrm, f = r->win_startfrm; i > 0; --i) {
-      if (r->frm_pow[f] <= r->thresh_sil) {
-	r->n_other++;
-	r->n_in_a_row++;
-      } else {
-	r->n_in_a_row = 0;
+    } else if (r->state == CONT_AD_STATE_SPEECH) {
+      for (i = r->win_validfrm, f = r->win_startfrm; i > 0; --i) {
+	if (r->frm_pow[f] <= r->thresh_sil)
+	  r->n_other++;
+	
+	f++;
+	if (f >= CONT_AD_ADFRMSIZE)
+	  f = 0;
       }
-      f++;
-      if (f >= CONT_AD_ADFRMSIZE)
-	f = 0;
     }
   }
-
-  return 0;
-}
-
-
-int32 cont_ad_set_rawmode (cont_ad_t *r, int32 mode)
-{
-  if (! r)
-    return -1;
-
-  r->rawmode = (mode == 0) ? 0 : 1;
+  
   return 0;
 }
 
@@ -1135,6 +1253,7 @@ cont_ad_t *cont_ad_init (ad_rec_t *a, int32 (*func)(ad_rec_t *, int16 *, int32))
 
     r->ad = a;
     r->adfunc = func;
+    r->eof = 0;
     r->rawmode = 0;
     
     if (a != NULL) 
@@ -1193,9 +1312,21 @@ cont_ad_t *cont_ad_init (ad_rec_t *a, int32 (*func)(ad_rec_t *, int16 *, int32))
     
     r->rawfp = NULL;
     r->logfp = NULL;
-    r->log_frmno = 0;
     
     cont_ad_reset (r);
     
     return r;
 }
+
+
+cont_ad_t *cont_ad_init_rawmode (ad_rec_t *a,
+				 int32 (*func)(ad_rec_t *, int16 *, int32))
+{
+    cont_ad_t *r;
+
+    r = cont_ad_init (a, func);
+    r->rawmode = 1;
+    
+    return r;
+}
+
